// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden snapshots (optimize:false, deterministic) > clip-path.svg 1`] = `
{
  "warnings": [],
  "xml": "<vector xmlns:android="http://schemas.android.com/apk/res/android"
    android:width="24dp"
    android:height="24dp"
    android:viewportWidth="24"
    android:viewportHeight="24">
    <group>
        <clip-path android:pathData="M6,2h12a4,4 0 0 1 4,4v12a4,4 0 0 1 -4,4h-12a4,4 0 0 1 -4,-4v-12a4,4 0 0 1 4,-4z" />
        <path
            android:pathData="M0 0h24v24H0z"
            android:fillColor="#FFFF0000" />
    </group>
</vector>
",
}
`;

exports[`golden snapshots (optimize:false, deterministic) > linear-gradient.svg 1`] = `
{
  "warnings": [],
  "xml": "<vector xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:width="24dp"
    android:height="24dp"
    android:viewportWidth="24"
    android:viewportHeight="24">
    <path
        android:pathData="M0 0h24v24H0z">
        <aapt:attr name="android:fillColor">
            <gradient
                android:startX="0"
                android:startY="0"
                android:endX="24"
                android:endY="0"
                android:type="linear">
                <item android:offset="0" android:color="#FF504E9C" />
                <item android:offset="1" android:color="#FF07B8D8" />
            </gradient>
        </aapt:attr>
    </path>
</vector>
",
}
`;

exports[`golden snapshots (optimize:false, deterministic) > objectbox-gradient.svg 1`] = `
{
  "warnings": [],
  "xml": "<vector xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:width="24dp"
    android:height="24dp"
    android:viewportWidth="24"
    android:viewportHeight="24">
    <path
        android:pathData="M2 2h10v10h-10z">
        <aapt:attr name="android:fillColor">
            <gradient
                android:startX="2"
                android:startY="2"
                android:endX="12"
                android:endY="2"
                android:type="linear">
                <item android:offset="0" android:color="#FFFF0000" />
                <item android:offset="1" android:color="#FF0000FF" />
            </gradient>
        </aapt:attr>
    </path>
</vector>
",
}
`;

exports[`golden snapshots (optimize:false, deterministic) > radial-gradient-transform.svg 1`] = `
{
  "warnings": [],
  "xml": "<vector xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:width="24dp"
    android:height="24dp"
    android:viewportWidth="24"
    android:viewportHeight="24">
    <path
        android:pathData="M0 0h24v24H0z">
        <aapt:attr name="android:fillColor">
            <gradient
                android:centerX="12"
                android:centerY="12"
                android:gradientRadius="12"
                android:type="radial">
                <item android:offset="0" android:color="#FFFFFFFF" />
                <item android:offset="1" android:color="#00000000" />
            </gradient>
        </aapt:attr>
    </path>
</vector>
",
}
`;

exports[`golden snapshots (optimize:false, deterministic) > skew-group.svg 1`] = `
{
  "warnings": [
    "group-skew",
  ],
  "xml": "<vector xmlns:android="http://schemas.android.com/apk/res/android"
    android:width="24dp"
    android:height="24dp"
    android:viewportWidth="24"
    android:viewportHeight="24">
    <path
        android:pathData="M0 0L5 10L15 10Z"
        android:fillColor="#FF0000FF" />
</vector>
",
}
`;

exports[`golden snapshots (optimize:false, deterministic) > stroke-icon.svg 1`] = `
{
  "warnings": [],
  "xml": "<vector xmlns:android="http://schemas.android.com/apk/res/android"
    android:width="24dp"
    android:height="24dp"
    android:viewportWidth="24"
    android:viewportHeight="24">
    <path
        android:pathData="M5 12h14M12 5v14"
        android:strokeColor="#FF000000"
        android:strokeWidth="2"
        android:strokeLineCap="round"
        android:strokeLineJoin="round" />
</vector>
",
}
`;

exports[`golden snapshots (optimize:false, deterministic) > use-ref.svg 1`] = `
{
  "warnings": [],
  "xml": "<vector xmlns:android="http://schemas.android.com/apk/res/android"
    android:width="24dp"
    android:height="24dp"
    android:viewportWidth="24"
    android:viewportHeight="24">
    <group
        android:translateX="2"
        android:translateY="2">
        <path
            android:pathData="M0 0h12v12H0z"
            android:fillColor="#FF00AA00" />
    </group>
</vector>
",
}
`;
